--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 
         <section class="acordeon">
             <button class="trigger" type="button">
-                <h2>Portfólio</h2>
+                <h2>Portfólio e certificados</h2>
             </button>
 
             <div class="content">
