--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
         </section>
 
         <footer>
-            <a href="https://www.dio.me/" target="_blank">
-                <img src="assets/img/dio.svg" alt="DIO">
+            <a href="https://wlanfibra.com.br/" target="_blank">
+                <img src="assets/img/wlan.svg" alt="DIO">
             </a>
         </footer>
     </main>
