--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <footer>
             <a href="https://wlanfibra.com.br/" target="_blank">
-                <img src="assets/img/wlan.svg" alt="WLAN">
+                <img src="assets/img/wlan.png" alt="WLAN">
             </a>
         </footer>
     </main>
